enables to creation temporary user on cluster that will support running operations;
